# grpcExample

./: Cargo.toml  build.rs
src/: client.rs  server.rs
src/protos/: calculate.rs  calculate_grpc.rs  mod.rs
src/protos/proto/: calculate.proto
